# IdentificationPlaysInRobotSoccer

./: README.md
01-TrajectoryClusteringInARobotSoccerContext/: .gitignore  CMakeLists.txt  LICENSE  build.sh  build_run.sh
01-TrajectoryClusteringInARobotSoccerContext/include/: Filter.h  Reader.h  constants.h  debug.h  fileFormat.h  tools.h
01-TrajectoryClusteringInARobotSoccerContext/src/: Filter.cpp  Main.cpp  Reader.cpp  fileFormat.cpp  tools.cpp
02-GenerateCluster/: Cell.cs  Clustering.cs  DBSCAN.cs  Node.cs  PathCollection.cs
02-GenerateCluster/01-GenCluster/GenCluster/: Deque.cs  Path.cs  PolyhedralDistanceFunction.cs  PolyhedralFrechetDistance.cs  VectorUtil.cs
02-GenerateCluster/GenCluster/: Program.cs  UpperEnvelope.cs
02-GenerateCluster/GenCluster/Old_data/: resultCluster_Cyrus_4_105.txt  resultCluster_Cyrus_4_110.txt  resultCluster_Cyrus_4_115.txt  resultCluster_Cyrus_4_85.txt  (+6 more)
02-GenerateCluster/Old_data/: resultCluster_Cyrus_4_100.txt  statistics_Cyrus_4_100.txt  statistics_Cyrus_4_105.txt
03-GenerateSequences/: Clustering.cs  KMeans.cs  NearestCluster.csproj  PathCollection.cs  PolyhedralUpperEnvelope.cs  Program.cs  Vector2.cs
03-GenerateSequences/NearestCluster/: DBSCAN.cs  DequeItem.cs  FrechetDistance.cs  Node.cs
03-GenerateSequences/data/: resultCluster_8_110.txt
04-ClusterSequences/: README.md
04-ClusterSequences/src/: AlignerParallel.h  FastaReader.h  GLMRegressor.cpp  IdentityCalculator.h  KmerHistogram.cpp  KmerHistogram.h  Matrix.cpp  Mutator.cpp  Mutator.h  SynDataGenerator.cpp
05-MovePredictor/: HELIOS.ipynb
(+22 files in other folders)
